[gd_scene load_steps=3 format=3 uid="uid://kq4dogevv8kq"]

[ext_resource type="Script" uid="uid://b1ktftfsqadcu" path="res://scripts/placement_area.gd" id="1_80uw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbhrr"]
size = Vector2(70, 35)

[node name="PlacementArea" type="Area2D"]
collision_mask = 4
script = ExtResource("1_80uw5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lbhrr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
